feat(be): As a FE, I want to have endpoint to create a new Fleet
